--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ jobs:
   build:
     docker:
       - image: circleci/node:6
+        environment:
+          MOCHA_FILE: "../test-results/mocha.xml"
     working_directory: /home/circleci/ci
     steps:
       - checkout
@@ -20,6 +22,9 @@ jobs:
       - run:
           name: Install Dependencies
           command: npm install
+      - run:
+          name: Install CI-only dependencies
+          command: npm install mocha-circleci-reporter codecov esdoc-uploader
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
